Add payments endpoint, adapter, update specs and some fixes
