# config/routes.rb
@@ -9,6 +9,7 @@ Rails.application.routes.draw do
       resources :events, only: %i[create index show]
       resources :tickets, only: %i[create index show]
       resources :reservations, only: %i[create index show]
+      resources :payments, only: %i[create]
 
       match '*unmatched', to: 'errors#not_found', via: :all
     end
